--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 # Tool Name :- MyServer
-# Author :- Rajkumar Dusad
-# Date :- 22/5/2018
+# Author :- jon Shaw
+# Date :- 22/4/2020
 # Powered By :- Aex Software's
 
 import sys
